# data_structures

./: .gitignore  CMakeLists.txt  README.md  main.c
ds/linkedlist/headers/: doubly_list.h  singly.h  singly_circular.h  singly_linked_list.h
ds/linkedlist/src/: singly_circular.c  singly_linked_list.c
lib/: utils.h
src/: main.c
src/ds/linkedlist/headers/: doubly_list.h  singly_circular.h
src/ds/linkedlist/src/: doubly_list.c  singly.c  singly_circular.c
src/ds/queue/headers/: dequeue.h
src/ds/queue/src/: dequeue.c
src/includes/linkedlist/: doubly.h  singly.h  singly_circular.h
src/includes/queue/: circular_queue.h  dequeue.h
src/includes/stack/: stack.h  stack_array.h  stack_ll.h
src/includes/trees/: binary_search_tree.h
src/lib/: utils.h
src/lib/headers/linkedlist/: singly.h
src/lib/headers/queue/: dequeue.h
src/lib/source/linkedlist/: singly.c
src/lib/source/queue/: dequeue.c
src/sources/linkedlist/: doubly.c  singly.c  singly_circular.c
src/sources/queue/: circular_queue.c
src/sources/stack/: stack.c  stack_array.c  stack_ll.c
src/sources/trees/: binary_search_tree.c
